[workspace]
default-members = [".", "rpc", "client"]
members = [".", "rpc", "client"]
exclude = ["providers/bitcoincore"]

[workspace.package]
version = "0.12.0-alpha.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
keywords = ["bitcoin", "lightning-network", "lnp-bp", "bitcoin-node"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.8.0"
strict_encoding = "2.8.1"
bp-std = "0.12.0-beta.5"
bp-wallet = "0.12.0-beta.5"

io-reactor = "0.6.0"
cyphernet = { version = "0.5.2", features = ["tor", "dns", "ed25519", "p2p-ed25519"] }
microservices = { version = "0.12.0" }
netservices = { version = "0.11.0", features = ["eidolon", "reactor"] }

redb = "2.4.0"
crossbeam-channel = "0.5.15"

serde = { version = "1", features = ["derive"] }

clap = { version = "4.4.8", features = ["derive", "env"] }
clap_complete = "4.5.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = { version = "0.11.3" }
shellexpand = { version = "3.1.0" }
dotenv = { version = "0.15" }
settings = { version = "0.14", package = "config" }
configure_me = { version = "0.4" }
configure_me_codegen = "0.4.4"

[package]
name = "bp-node"
description = "BP Node: sovereign bitcoin wallet backend"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
build = "build.rs"
exclude = [".github", "Dockerfile", ".dockerignore", "contrib", "shell"]

[lib]
name = "bpnode"

[[bin]]
name = "bpd"
required-features = ["server"]

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
bp-wallet = { workspace = true, features = ["cli"] }
bp-rpc = { version = "0.12.0-alpha.1", path = "rpc" }
io-reactor.workspace = true
microservices = { workspace = true, features = ["log"] }
netservices = { workspace = true, features = ["log"] }
redb.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
clap = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
settings = { workspace = true, optional = true }
configure_me = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }

[build-dependencies]
amplify.workspace = true
bp-wallet = { workspace = true, features = ["cli"] }
bp-rpc = { version = "0.12.0-alpha.1", path = "rpc" }
clap.workspace = true
clap_complete.workspace = true
log.workspace = true
shellexpand.workspace = true
configure_me_codegen.workspace = true

[features]
default = ["server"]

# Server is a standalone application that runs daemons.
# Required for all apps that can be launched from command-line shell as binaries
# (i.e. both servers and cli)
server = ["dep:dotenv", "dep:clap", "dep:settings", "dep:configure_me", "dep:shellexpand"]

[package.metadata.configure_me]
spec = "config_spec.toml"

[patch.crates-io]
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }

io-reactor = { git = "https://github.com/rust-amplify/io-reactor", branch = "v0.6" }
cyphergraphy = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
cypheraddr = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
microservices = { git = "https://github.com/cyphernet-labs/microservices.rs", branch = "master" }
netservices = { git = "https://github.com/cyphernet-labs/netservices.rs", branch = "server" }
