[package]
name = "bp-cli"
description = "BP node command-line interface"
version = "0.8.0-alpha.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "lightning-network", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "bp-cli"

[dependencies]
amplify = "3.12.0"
internet2 = "0.8.0-beta.1"
microservices = { version = "0.8.0-rc.2", default-features = false, features = ["cli"], git = "https://github.com/Internet2-WG/rust-microservices" }
bp_rpc = { version = "0.8.0-alpha.1", path = "../rpc" }
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"
shellexpand = "2.1"
colored = "2"

[build-dependencies]
amplify = "3.12.0"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
internet2 = "0.8.0-beta.1"
bp_rpc = { version = "0.8.0-alpha.1", path = "../rpc" }
configure_me_codegen = "0.4"
