[package]
name = "bp-cli"
description = "BP node command-line interface"
version = "0.8.0-alpha.2"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "lightning-network", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "bp-cli"

[dependencies]
amplify.workspace = true
bp-rpc = { version = "0.11.0-alpha.1", path = "../rpc" }
clap.workspace = true
log.workspace = true
shellexpand.workspace = true
colored.workspace = true

[build-dependencies]
amplify.workspace = true
clap.workspace = true
clap_complete.workspace = true
bp-rpc = { version = "0.11.0-alpha.1", path = "../rpc" }
configure_me_codegen.workspace = true
