[package]
name = "bp-client"
description = "BP node command-line interface"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["bitcoin", "lightning-network", "lnp-bp"]
categories = ["cryptography::cryptocurrencies", "network-programming", "command-line-utilities"]
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "bp-cli"
required-features = ["cli"]

[dependencies]
amplify.workspace = true
bp-wallet = { workspace = true, optional = true, features = ["cli"] }
bp-rpc = { version = "0.11.0-alpha.1", path = "../rpc" }
sha2.workspace = true
cyphernet.workspace = true
io-reactor.workspace = true
netservices.workspace = true
clap = { workspace = true, optional = true }
log = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
colored = { workspace = true, optional = true }

[build-dependencies]
amplify.workspace = true
clap.workspace = true
clap_complete.workspace = true
bp-rpc = { version = "0.11.0-alpha.1", path = "../rpc" }
configure_me_codegen.workspace = true

[features]
default = ["cli"]
all = ["log", "cli"]
cli = ["log", "clap", "colored", "shellexpand", "bp-wallet"]
