[package]
name = "bp-rpc"
description = "BP Node RPC API"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lib]
name = "bprpc"

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
serde_crate = { workspace = true, optional = true }

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "serde_crate", "amplify/serde"
]
