[package]
name = "bp-rpc"
description = "BP Node RPC API"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lib]
name = "bprpc"

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
bp-std.workspace = true
bp-wallet.workspace = true
cyphernet.workspace = true
netservices.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "dep:serde", "amplify/serde"
]
