[package]
name = "txlib"
description = "Library for Bitcoin transaction index based on LNPBP-5"
version = "0.1.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
edition = "2018"

[dependencies]
diesel = { version = "~1.4", features = ["postgres", "uuid", "numeric", "chrono"] }
derive_wrapper = "~0.1"
chrono = "~0.4"
lnpbp = { git = "https://github.com/lnp-bp/rust-lnpbp", branch = "feat-lnpbp5" }
