[workspace]

[package]
name = "bp-node-bitcoincore-provider"
description = "Bitcoin Core block provider for BP Node"
version = "0.12.0-alpha.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
keywords = ["bitcoin", "blockchain", "bitcoin-core"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"

[[bin]]
name = "bp-bc-import"
path = "src/main.rs"

[dependencies]
strict_encoding = "2.8.1"
bp-consensus = { version = "0.12.0-beta.5" }
bp-invoice = { version = "0.12.0-beta.5" }
bp-client = { version = "0.12.0-alpha.1" }
cyphernet = { version = "0.5.2", features = ["tor", "dns", "ed25519", "p2p-ed25519"] }
microservices = { version = "0.12.0" }
netservices = { version = "0.12.0-beta.1", features = ["eidolon", "reactor"] }
crossbeam-channel = "0.5.15"
clap = { version = "4.4.8", features = ["derive", "env"] }
log = { version = "0.4.27" }
loglevel = { version = "0.2.0" }

[patch.crates-io]
io-reactor = { git = "https://github.com/rust-amplify/io-reactor", branch = "v0.6" }
cyphergraphy = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
cypheraddr = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
microservices = { git = "https://github.com/cyphernet-labs/microservices.rs", branch = "master" }
netservices = { git = "https://github.com/cyphernet-labs/netservices.rs", branch = "server" }

bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
#bp-client = { git = "https://github.com/BP-WG/bp-node", branch = "master" }
bp-client = { path = "../../client" }